--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,9 @@ DATABASEHOST = localhost
 DATABASEPORT = 3306
 DATABASEUSERNAME = root
 DATABASEPASSWORD = 
-DATABASENAME = core
+DATABASENAME = core_nest
 
 ## MONGO
 MONGODB = mongodb://localhost:27017/core
-
 
 PORT = 3000
