--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.1.1",
     "mysql2": "^3.9.0",
+    "nestjs-i18n": "^10.4.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
